--- a/fontend/src/components/TempProfile/TempProfile.scss
+++ b/fontend/src/components/TempProfile/TempProfile.scss
@@ -66,7 +66,8 @@
             border-radius: 5px;
             background-color: $bg_template;
             resize: vertical;
-            min-height: 100px;
+            min-height: 50px;
+            max-height: 100px;
             padding: 10px;
             // min-height: 100px;
         }
