--- a/fontend/src/pages/tempate/Template.scss
+++ b/fontend/src/pages/tempate/Template.scss
@@ -37,7 +37,7 @@
                 border: 15px solid rgba($color: $black, $alpha: 1);
                 border-radius: 60px;
                 position: relative;
-                width: 340px;
+                width: 330px;
                 height: 660px;
                 object-fit: cover;
             }
